Fixed alignments, layout and design, added a background color

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "directory": "dist",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
